fixed my photo aligning issue

--- a/index.css
+++ b/index.css
@@ -30,15 +30,19 @@ body{
 }
 
 * {
- 
-    font-size: 1.6rem;
-}
-#navigation {
-    display:flex;
-    padding-bottom: 2%;
-    width:100%;
+    box-sizing:border-box;
+    padding:0;
+    margin:0;
+    max-width:100%;
+    border:1px solid grey;
 }
 
+.links {
+    width:60%;
+    display:flex;
+    justify-content:space-evenly;
+    align-items:center;
+}
 
 .mainName {
     order: 0;
@@ -61,11 +65,6 @@ body{
     margin: 0 auto;
     width: 70%;
     height: 10%;
-}
-
-span {
-    padding-left: 100px;
-    padding-right: 1000px;
 }
 
 .intro {
@@ -106,33 +105,11 @@ h1 {
     justify-content: space-around;
 }
 
-.images div {
-    flex-flow: row wrap;
-    justify-content: space-around;
-    min-width: 14rem;
-    max-width: 40rem;
+.PhotoBox {
+    width:30%;
+    margin:4% 0;
+    text-align:center;
 }
-
-.pics {
-    max-width: 100%;
-    max-height: 100%;
-    margin: 0 auto;
-    width: 100%;
-    height: 100%;
-    flex-wrap: wrap;
-  }
-
-
- .images div.pics {
-    vertical-align: top;
-    display: inline-block;
-    text-align: center;
-    width: 120px;
-}
-.caption {
-    display: block;
-}
-
 
 .thePit {
     display: flex;
